new view files transfer

--- a/templates/timer.html
+++ b/templates/timer.html
@@ -5,7 +5,8 @@
   <title>Study Timer</title>
 </head>
 <body>
-  <h1>Study Timer</h1>
+  <h2>You are currently studying subject1</h2>
+  <h1>Timer</h1>
   <div id="timer-display" style="font-size:48px;">00:00</div>
   <button id="start-btn">Start</button>
   <button id="stop-btn">Stop</button>
