--- a/templates/study/timer.html
+++ b/templates/study/timer.html
@@ -5,7 +5,7 @@
   <title>Study Timer</title>
 </head>
 <body>
-  <h2>You are currently studying subject1</h2>
+  <h2>You are currently studying {{subject|title}}</h2>
   <h1>Timer</h1>
   <div id="timer-display" style="font-size:48px;">00:00</div>
   <button id="start-btn">Start</button>
