--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block page_title %}Home{% endblock %}
+    
+    {% block content %}
     <ul>
         {% for view_name, label in home_page_items %}
         <li><a href="{% url view_name %}">{{ label }}</a></li>
         {% endfor %}
     </ul>
-</body>
-</html>
+    {% endblock %}
