Add template with form

--- a/templates/study/timer.html
+++ b/templates/study/timer.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
-{% block page_title %}Study Timer{% endblock %}
+{% block page_title %}
+    Study Timer
+{% endblock %}
 
 {% block content %}
   <h2>You are currently studying {{ subject.name|title }}</h2>
