--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,13 @@
 </head>
 <body>
     <h4>Study Tracker</h4>
+     {% if messages %}
+      <script>
+        {% for msg in messages %}
+          alert({{ msg|escapejs }});
+        {% endfor %}
+      </script>
+    {% endif %}
     {% block content %}{% endblock %}
 </body>
 </html>
