Add static files

--- a/templates/404.html
+++ b/templates/404.html
@@ -5,5 +5,5 @@
 {% endblock %}
 
 {% block content %}
-    <h1> We cuould not find that page! </h1>
+    <h1> We could not find that page! </h1>
 {% endblock %}
