--- a/templates/add_subject.html
+++ b/templates/add_subject.html
@@ -8,12 +8,7 @@
 {% block content %}
     <form method="POST">
         {% csrf_token %}
-        <label for="id_name">Subject Name:</label>
-        <input type="text" id="id_name" name="subject_name">
-        
-        <label for="id_goal">Daily Goal (minutes):</label>
-        <input type="number" id="id_goal" name="daily_goal" min="0" step="1">
-        
+        {{ form }}
         <button type="submit">Add</button>
     </form>
 {% endblock %}
