--- a/templates/add_subject.html
+++ b/templates/add_subject.html
@@ -8,7 +8,8 @@
 {% block content %}
     <form method="POST">
         {% csrf_token %}
-        {{ form }}
+        {{ form.as_p }}
+
         <button type="submit">Add</button>
     </form>
 {% endblock %}
