--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -2,7 +2,8 @@
 {% load static %}
 
 {% block css_files %}
-    <link rel="stylesheet" href="{% static 'tracker.css' %}">
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
+<link rel="stylesheet" href="{% static 'tracker.css' %}">
 {% endblock %}
 
 {% block page_title %} Home {% endblock %}
