form filed customized with new values

--- a/templates/manage_subjects/subject_info.html
+++ b/templates/manage_subjects/subject_info.html
@@ -16,9 +16,9 @@
         {% csrf_token %}
 
         <input type="hidden" name="action" value="edit_goal">
-        {{ form.new_daily_goal.label_tag }}
-        {{ form.new_daily_goal }}
-
+<!--        {{ form.new_daily_goal.label_tag }}-->
+<!--        {{ form.new_daily_goal }}-->
+        {{ form }}
         <button>Edit</button>
     </form>
 
