--- a/templates/add_subject.html
+++ b/templates/add_subject.html
@@ -8,7 +8,7 @@
 {% block content %}
     <form method="POST">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form }}
 
         <button type="submit">Add</button>
     </form>
