--- a/templates/manage_subjects/subject_info.html
+++ b/templates/manage_subjects/subject_info.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-{% include 'includes/header.html'%}
+{% include "includes\back_button.html" %}
 
     <h3> {{subject.name|title}} Info: </h3>
     <p>Daily Goal: {{subject.daily_goal}} minutes</p>
