--- a/templates/stats/detailed_subject.html
+++ b/templates/stats/detailed_subject.html
@@ -3,7 +3,8 @@
 {% block page_title %} {{ subject.name|title }} — Stats {% endblock %}
 
 {% block content %}
-{% include 'includes/header.html'%}
+{% include "includes\back_button.html" %}
+
 <!-- Hero -->
     <div class="hero">
       <h2>Average per study day</h2>
