--- a/templates/study/timer.html
+++ b/templates/study/timer.html
@@ -5,6 +5,8 @@
 {% endblock %}
 
 {% block content %}
+{% include "includes\back_button.html" %}
+
   <h2>You are currently studying {{ subject.name|title }}</h2>
   <h1>Timer</h1>
 
