manage subjects template new design

--- a/templates/includes/back_button.html
+++ b/templates/includes/back_button.html
@@ -1,5 +1,5 @@
 <header>
     <nav>
-        <a href="{% url 'my_subjects' %}">Go Back</a>
+        <a href="{% url 'my_subjects' %}">Go Back To My Subjects</a>
     </nav>
 </header>
