--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,13 @@
       </script>
     {% endif %}
 
+    {% if user.is_authenticated %}
+       <p>Welcome, {{ user.username }} | <a href="{% url 'logout' %}">Logout</a></p>
+    {% else %}
+        <a href="{% url 'login' %}">Login</a> |
+        <a href="{% url 'register' %}">Register</a>
+    {% endif %}
+
     {% block content %}{% endblock %}
 </body>
 </html>
