--- a/templates/manage_subjects/subject_info.html
+++ b/templates/manage_subjects/subject_info.html
@@ -32,6 +32,12 @@
     <button type="submit">Update Goal</button>
 </form>
 
+<script>
+function confirmDelete() {
+    return confirm("Are you sure you want to delete this subject? This action cannot be undone.");
+}
+</script>
+
 {% endblock %}
 
 
